--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,25 @@
+---
+interface Props {
+	title: string;
+}
+
+const {title} = Astro.props;
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="en" class="no-scrollbar">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+    	<meta name="description" content="as fast as possible">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
+		<title>{title}</title>
 	</head>
-	<body>
-		<slot />
+	<body class="bg-neutral-900 text-white no-scrollbar overflow-x-hidden">
+		<main class="flex justify-center relative z-10 no-scrollbar">
+			<slot />
+		</main>
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
