--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,10 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import Sculpture from '../components/Sculpture.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-	<Welcome />
+<Layout title='sp33dfre4k'>
+	<div class="flex flex-col items-center justify-center h-screen gap-y-2">
+		<h1 class="text-4xl font-bold">sp33dfre4k</h1>
+	</div>
 </Layout>
