Hide scrollbar on mobile

--- a/src/styles/scrollbar.css
+++ b/src/styles/scrollbar.css
@@ -1,6 +1,7 @@
 .no-scrollbar {
   -ms-overflow-style: none;
   scrollbar-width: none;
+  overflow: hidden;
 }
 
 .no-scrollbar::-webkit-scrollbar {
