--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const {title} = Astro.props;
 		<link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
 		<title>{title}</title>
 	</head>
-	<body class="bg-neutral-900 text-white no-scrollbar overflow-x-hidden">
+	<body class="bg-neutral-900 text-white no-scrollbar overflow-x-hidden overflow-y-hidden">
 		<main class="flex justify-center relative z-10 no-scrollbar">
 			<slot />
 		</main>
