--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,10 +17,11 @@ import Layout from '../layouts/Layout.astro';
 	const sculptureContainer = document.getElementById('sculpture-container');
 
 	const scene = new THREE.Scene();
-	let camera: THREE.PerspectiveCamera;
+	let camera: THREE.PerspectiveCamera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 	
 	if (sculptureContainer) {
-		camera = new THREE.PerspectiveCamera(75, sculptureContainer.clientWidth / sculptureContainer.clientHeight, 0.1, 1000);
+		camera.aspect = sculptureContainer.clientWidth / sculptureContainer.clientHeight;
+		camera.updateProjectionMatrix();
 	}
 
 	const renderer = new THREE.WebGLRenderer({ alpha: true });
