--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,11 +11,12 @@ const {title} = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-    	<meta name="description" content="as fast as possible">
+		<meta name="description" content="as fast as possible">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
 		<title>{title}</title>
+		<link rel="icon" type="image/svg+xml" href="/logo.svg">
 	</head>
 	<body class="bg-neutral-900 text-white no-scrollbar overflow-x-hidden overflow-y-hidden">
 		<main class="flex justify-center relative z-10 no-scrollbar">
