--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const {twitter, github} = {
 ---
 
 <Layout title='sp33dfre4k'>
-	<div class="flex flex-col items-center justify-center h-screen w-screen gap-y-8 mx-8 mt-8 sm:mx-24">
+	<div class="flex flex-col items-center justify-center h-screen w-screen gap-y-8 mx-8 mt-8">
 		<div class="flex w-full items-center justify-start gap-x-4">
 			<a href="/">
 				<img src="/logo.svg" alt="Logo" class="w-8 h-8" />
@@ -17,8 +17,8 @@ const {twitter, github} = {
 			<a href={twitter} class="hover:text-teal-400">Twitter</a>
 			<a href={github} class="hover:text-teal-400">GitHub</a>
 		</div>
-		<div class="flex flex-col items-center justify-start h-full gap-y-16">
-			<h1 class="text-4xl font-bold"><span>sp33d</span><span class="text-teal-400">fre4k</span></h1>
+		<h1 class="text-4xl font-bold"><span>sp33d</span><span class="text-teal-400">fre4k</span></h1>
+		<div class="flex flex-col items-center justify-center h-full gap-y-16">
 			<div id="sculpture-container" class="flex w-[250px] h-[250px] sm:w-[500px] sm:h-[500px] border border-slate-400 rounded-lg items-center justify-center"></div>
 		</div>
 	</div>
