Fix heading size on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const {twitter, github} = {
 				<GitHubLogo fill="white" size="24" class="group-hover:fill-teal-400"/>
 			</a>
 		</div>
-		<h1 class="text-4xl font-bold"><span>sp33d</span><span class="text-teal-400">fre4k</span></h1>
+		<h1 class="text-2xl sm:text-4xl font-bold"><span>sp33d</span><span class="text-teal-400">fre4k</span></h1>
 		<div class="flex flex-col items-center justify-start h-full mt-8">
 			<div id="sculpture-container" class="flex w-[250px] h-[250px] sm:w-[500px] sm:h-[500px] border border-slate-400 rounded-lg items-center justify-center"></div>
 		</div>
